--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -33,7 +33,7 @@
         (input)="onSearchInput($event)"
       />
 
-      <div class="flex-shrink-0 dropdown">
+      <div class="flex-shrink-0 dropdown profile-picture-dropdown-container">
         <a
           href="#"
           #navLink
@@ -49,6 +49,7 @@
             height="26"
             class="rounded-circle"
           />
+          <span class="notification-badge">{{ 3 }}</span>
         </a>
         <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser2">
           <li>
