Implement alternative spinner design

--- a/client/src/app/components/training-plan-card/training-plan-card.component.html
+++ b/client/src/app/components/training-plan-card/training-plan-card.component.html
@@ -16,7 +16,7 @@
       {{ trainingPlan.lastUpdated }}
     </p>
 
-    <p class="card-text d-flex gap-2"><app-activity-icon />{{ trainingPlan.averageTrainingDayDuration }}</p>
+    <p class="card-text d-flex gap-2"><app-activity-icon [size]="15" />{{ trainingPlan.averageTrainingDayDuration }}</p>
   </div>
   <div
     class="d-flex justify-content-between align-items-center pe-3"
