--- a/client/src/app/components/loaders/spinner/spinner.component.html
+++ b/client/src/app/components/loaders/spinner/spinner.component.html
@@ -1,3 +1,10 @@
 <div class="spinner-overlay">
-  <div class="spinner"></div>
+  <div class="sk-chase">
+    <div class="sk-chase-dot"></div>
+    <div class="sk-chase-dot"></div>
+    <div class="sk-chase-dot"></div>
+    <div class="sk-chase-dot"></div>
+    <div class="sk-chase-dot"></div>
+    <div class="sk-chase-dot"></div>
+  </div>
 </div>
