--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -19,7 +19,9 @@
         </li>
         <li><hr class="dropdown-divider" /></li>
         <li>
-          <a href="/user/usage" #navLink class="dropdown-item" (click)="navigateTo($event)">Nutzungstatistiken</a>
+          <a href="/user/usage" #navLink #statisticLink class="dropdown-item" (click)="navigateTo($event)"
+            >Nutzungstatistiken</a
+          >
         </li>
       </ul>
     </div>
