--- a/client/src/app/usage-statistics/usage-statistics.component.html
+++ b/client/src/app/usage-statistics/usage-statistics.component.html
@@ -1,11 +1,5 @@
-<app-activity-calendar [trainingDays]="365" />
-
 @if (activityCalendarData$ | async; as activityData) {
-  <ul>
-    @for (entry of activityData; track entry) {
-      <li>Day Index: {{ entry[0] }}, Tonnage: {{ entry[1] }}</li>
-    }
-  </ul>
+  <app-activity-calendar [activityData]="activityData" />
 } @else {
   <app-spinner />
 }
