--- a/client/src/app/activity-calendar/activity-calendar.component.scss
+++ b/client/src/app/activity-calendar/activity-calendar.component.scss
@@ -78,7 +78,7 @@ $level-4-color: darken($accent-color, 10%);
       border-radius: 2px;
 
       &.level-1 {
-        background-color: $level-1-color;
+        background-color: #e4e4e4;
       }
 
       &.level-2 {
