--- a/client/src/app/Pages/training-view/training-view.component.html
+++ b/client/src/app/Pages/training-view/training-view.component.html
@@ -157,7 +157,9 @@
   </form>
 }
 
-<div class="fixed-bottom-bar">
-  <i class="bx bx-left-arrow-alt icon" (click)="navigateWeek(-1)"></i>
-  <i class="bx bx-right-arrow-alt icon" (click)="navigateWeek(1)"></i>
-</div>
+@if (!isMobile) {
+  <div class="fixed-bottom-bar">
+    <i class="bx bx-left-arrow-alt icon" (click)="navigateWeek(-1)"></i>
+    <i class="bx bx-right-arrow-alt icon" (click)="navigateWeek(1)"></i>
+  </div>
+}
