Implement training day statistics service

--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -51,7 +51,7 @@
             height="26"
             class="rounded-circle"
           />
-          <span class="notification-badge">{{ 3 }}</span>
+          <!-- <span class="notification-badge">{{ 3 }}</span> -->
         </a>
         <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser2">
           <li>
