Implement correct fetch of data via async pipe

--- a/client/src/app/notification-page/notification-page.component.html
+++ b/client/src/app/notification-page/notification-page.component.html
@@ -1,1 +1,5 @@
-<p>notification-page works!</p>
+@if (trainingDayNotifications$ | async; as trainingDayNotifications) {
+  {{ trainingDayNotifications | json }}
+} @else {
+  <app-spinner />
+}
