--- a/client/src/app/Pages/exercises/exercises.component.html
+++ b/client/src/app/Pages/exercises/exercises.component.html
@@ -1,4 +1,6 @@
 @if (exerciseData$ | async; as exerciseData) {
+  <app-exercise-table-skeleton />
+
   <div class="container">
     <form>
       @for (category of exerciseData.exerciseCategories; track category; let categoryIndex = $index) {
