--- a/client/src/app/skeleton/skeleton.component.html
+++ b/client/src/app/skeleton/skeleton.component.html
@@ -1,9 +1,7 @@
 <div
   class="skeleton"
   [ngStyle]="{
-    width: width,
-    height: height,
-    borderRadius: borderRadius,
-    backgroundColor: backgroundColor,
+    width: width(),
+    height: height(),
   }"
 ></div>
