--- a/client/src/app/skeleton/skeleton.component.scss
+++ b/client/src/app/skeleton/skeleton.component.scss
@@ -1,7 +1,10 @@
 .skeleton {
   background-image: linear-gradient(90deg, #f0f0f0 25%, #e0e0e0 50%, #f0f0f0 75%);
+  background-color: #e0e0e0;
+  border-radius: 4px;
   background-size: 200% 100%;
   animation: loading 1.5s infinite;
+  margin-bottom: 0.5rem;
 }
 
 @keyframes loading {
