--- a/client/src/app/components/loaders/skeletons/skeleton-card/skeleton-card.component.html
+++ b/client/src/app/components/loaders/skeletons/skeleton-card/skeleton-card.component.html
@@ -5,14 +5,14 @@
     <div class="img-fluid skeleton-avatar"></div>
   </div>
   <div class="card-body">
-    <div class="skeleton-title mb-3"></div>
-    <div class="skeleton-text mb-2"></div>
-    <div class="skeleton-text short"></div>
+    <app-skeleton [height]="'20px'" [width]="'70%'" [animationStyle]="pulse" />
+    <app-skeleton [height]="'15px'" [width]="'12rem'" [animationStyle]="pulse" />
+    <app-skeleton [height]="'15px'" [width]="'9.5rem'" [animationStyle]="pulse" />
   </div>
   <div class="card-footer d-flex">
-    <div class="skeleton-button"></div>
-    <div class="skeleton-button"></div>
-    <div class="skeleton-button"></div>
-    <div class="skeleton-button"></div>
+    <app-skeleton [height]="'2rem'" [width]="'2rem'" [animationStyle]="pulse" />
+    <app-skeleton [height]="'2rem'" [width]="'2rem'" [animationStyle]="pulse" />
+    <app-skeleton [height]="'2rem'" [width]="'2rem'" [animationStyle]="pulse" />
+    <app-skeleton [height]="'2rem'" [width]="'2rem'" [animationStyle]="pulse" />
   </div>
 </div>
