Add is circular property tp skeleton viewer

--- a/client/src/app/components/loaders/skeletons/skeleton-card/skeleton-card.component.html
+++ b/client/src/app/components/loaders/skeletons/skeleton-card/skeleton-card.component.html
@@ -1,5 +1,5 @@
-<div class="card card-custom bg-white border-white border-0 mb-3">
-  <div class="card-custom-img skeleton-img"></div>
+<div class="card border-0 mb-3">
+  <app-skeleton [height]="'175px'" [animationStyle]="pulse" />
   <div class="card-custom-avatar"></div>
   <div class="card-custom-avatar">
     <div class="img-fluid skeleton-avatar"></div>
@@ -9,7 +9,7 @@
     <app-skeleton [height]="'15px'" [width]="'12rem'" [animationStyle]="pulse" />
     <app-skeleton [height]="'15px'" [width]="'9.5rem'" [animationStyle]="pulse" />
   </div>
-  <div class="card-footer d-flex">
+  <div class="card-footer">
     <app-skeleton [height]="'2rem'" [width]="'2rem'" [animationStyle]="pulse" />
     <app-skeleton [height]="'2rem'" [width]="'2rem'" [animationStyle]="pulse" />
     <app-skeleton [height]="'2rem'" [width]="'2rem'" [animationStyle]="pulse" />
