--- a/client/src/app/skeleton/skeleton.component.scss
+++ b/client/src/app/skeleton/skeleton.component.scss
@@ -12,6 +12,10 @@
   &.pulse {
     animation: pulse 1.5s infinite ease-in-out;
   }
+
+  &.circular {
+    border-radius: 50%; // Makes the skeleton circular
+  }
 }
 
 @keyframes pulse {
