--- a/client/src/app/components/loaders/skeletons/skeleton-card/skeleton-card.component.scss
+++ b/client/src/app/components/loaders/skeletons/skeleton-card/skeleton-card.component.scss
@@ -1,32 +1,17 @@
-/* Skeleton Loader Styles */
-.skeleton-img {
-  height: 175px;
-  background-color: #e0e0e0;
-  background-size: cover;
-  background-position: center;
-  border-radius: 0.25rem;
-  animation: pulse 1.5s infinite ease-in-out;
-}
-
-.skeleton-avatar {
-  width: 50px;
-  height: 50px;
-  background-color: #e0e0e0;
-  border-radius: 50%;
+.avatar-container {
   position: absolute;
   top: 147.5px;
   left: 10px;
-  animation: pulse 1.5s infinite ease-in-out;
+}
+
+.card {
+  border: none;
+  margin-bottom: 1rem;
 }
 
 .card-body {
-  padding-top: 2.75rem;
+  padding-top: 2.25rem;
   min-height: 190px;
-}
-
-.card-footer {
-  background-color: inherit;
-  border-top: none;
 }
 
 .card-footer {
@@ -34,16 +19,7 @@
   flex-direction: row;
   justify-content: start;
   gap: 12px;
-}
 
-@keyframes pulse {
-  0% {
-    background-color: #e0e0e0;
-  }
-  50% {
-    background-color: #f0f0f0;
-  }
-  100% {
-    background-color: #e0e0e0;
-  }
+  background-color: inherit;
+  border-top: none;
 }
