--- a/client/src/app/components/loaders/skeletons/skeleton-training-table/skeleton-training-table.component.scss
+++ b/client/src/app/components/loaders/skeletons/skeleton-training-table/skeleton-training-table.component.scss
@@ -1,41 +1,9 @@
-.skeleton-container {
+:host {
   display: flex;
   flex-direction: column;
-  gap: 16px;
 }
 
 .skeleton-section {
-  /* background-color: #f0f0f0; */
   background: inherit;
   padding: 16px 8px;
-}
-
-.skeleton-row {
-  display: flex;
-  gap: 10px;
-}
-
-.skeleton-line {
-  width: 12ch;
-  height: 1.5rem;
-  margin-bottom: 1.2rem;
-  background-color: #e0e0e0;
-  border-radius: 4px;
-  animation: pulse 1.5s infinite ease-in-out;
-}
-
-.skeleton-fill {
-  flex-grow: 1;
-}
-
-@keyframes pulse {
-  0% {
-    background-color: #e0e0e0;
-  }
-  50% {
-    background-color: #f0f0f0;
-  }
-  100% {
-    background-color: #e0e0e0;
-  }
 }
