decreased padding in mobile header

--- a/client/src/app/components/header/header.component.scss
+++ b/client/src/app/components/header/header.component.scss
@@ -32,8 +32,7 @@
 
 @media screen and (max-width: 786px) {
   #header {
-    padding-inline: 4%;
-    padding-left: 1.5%;
+    padding: 0 4% 0% 1.5%;
   }
 }
 
