--- a/client/src/app/training-day-notification/training-day-notification.component.scss
+++ b/client/src/app/training-day-notification/training-day-notification.component.scss
@@ -4,6 +4,14 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 16px;
   margin-bottom: 1rem;
+
+  &:hover {
+    box-shadow: #007bff;
+  }
+
+  app-close-icon:hover {
+    cursor: pointer;
+  }
 }
 
 .training-notification-header {
