--- a/client/src/app/training-day-notification/training-day-notification.component.html
+++ b/client/src/app/training-day-notification/training-day-notification.component.html
@@ -22,6 +22,10 @@
           </p>
         </div>
       </div>
+      <!-- Added button to navigate to the training plan -->
+      <div class="mt-3">
+        <button class="btn btn-light" (click)="goToTrainingPlan(notification.id)">Zum Trainingsplan gehen</button>
+      </div>
     </div>
   </div>
 }
