Implement collapse logic for training day notification

--- a/client/src/app/training-day-notification/training-day-notification.component.html
+++ b/client/src/app/training-day-notification/training-day-notification.component.html
@@ -1,4 +1,6 @@
 @for (notification of notifications(); track notifications) {
+  @let exerciseTabCollapsed = notification.exerciseTabCollapsed;
+
   <div class="training-notification-card">
     <div class="training-notification-header">
       <h5>Training Day Summary</h5>
@@ -10,19 +12,27 @@
         <strong>Duration:</strong> {{ notification.durationInMinutes }} minutes<br />
         <strong>Total Tonnage:</strong> {{ notification.trainingDayTonnage }} kg
       </p>
-      <h6>Exercises:</h6>
-      <div class="exercises-container">
-        <div class="exercise-card" *ngFor="let exercise of notification.exercises">
-          <strong>{{ exercise.exercise }}</strong>
-          <p>
-            Sets: {{ exercise.sets }}, Reps: {{ exercise.reps }}, Weight: {{ exercise.weight }} kg,<br />
-            @if (exercise.actualRPE) {
-              RPE: {{ exercise.actualRPE }}
-            }
-          </p>
-        </div>
+      <div class="exercise-headline" (click)="toggleExerciseTab(notification)">
+        Exercises
+        @if (exerciseTabCollapsed) {
+          <app-chevron-up-icon />
+        } @else {
+          <app-chevron-up-icon />
+        }
       </div>
-      <!-- Added button to navigate to the training plan -->
+      @if (!exerciseTabCollapsed) {
+        <div class="exercises-container">
+          <div class="exercise-card" *ngFor="let exercise of notification.exercises">
+            <strong>{{ exercise.exercise }}</strong>
+            <p>Sets: {{ exercise.sets }}</p>
+            <p>Reps: {{ exercise.reps }}</p>
+            <p>Weight: {{ exercise.weight }} kg</p>
+            @if (exercise.actualRPE) {
+              <p>RPE: {{ exercise.actualRPE }}</p>
+            }
+          </div>
+        </div>
+      }
       <div class="mt-3">
         <button class="btn btn-light" (click)="goToTrainingPlan(notification.id)">Zum Trainingsplan gehen</button>
       </div>
