--- a/client/src/app/training-day-notification/training-day-notification.component.html
+++ b/client/src/app/training-day-notification/training-day-notification.component.html
@@ -1,4 +1,4 @@
-@for (notification of notifications(); track notifications) {
+@for (notification of notifications(); track notification.id) {
   @let exerciseTabCollapsed = notification.exerciseTabCollapsed;
 
   <div class="training-notification-card">
@@ -15,14 +15,14 @@
       <div class="exercise-headline" (click)="toggleExerciseTab(notification)">
         Exercises
         @if (exerciseTabCollapsed) {
-          <app-chevron-up-icon />
+          <app-chevron-down-icon />
         } @else {
           <app-chevron-up-icon />
         }
       </div>
-      @if (!exerciseTabCollapsed) {
-        <div class="exercises-container">
-          <div class="exercise-card" *ngFor="let exercise of notification.exercises">
+      <div class="exercises-container" [@toggleCollapse]="exerciseTabCollapsed ? 'collapsed' : 'expanded'">
+        @for (exercise of notification.exercises; track exercise) {
+          <div class="exercise-card">
             <strong>{{ exercise.exercise }}</strong>
             <p>Sets: {{ exercise.sets }}</p>
             <p>Reps: {{ exercise.reps }}</p>
@@ -31,8 +31,8 @@
               <p>RPE: {{ exercise.actualRPE }}</p>
             }
           </div>
-        </div>
-      }
+        }
+      </div>
       <div class="mt-3">
         <button class="btn btn-light" (click)="goToTrainingPlan(notification.id)">Zum Trainingsplan gehen</button>
       </div>
