Implement format date pipe

--- a/client/src/app/training-day-notification/training-day-notification.component.html
+++ b/client/src/app/training-day-notification/training-day-notification.component.html
@@ -8,7 +8,7 @@
     </div>
     <div class="training-notification-body">
       <p>
-        <strong>Date:</strong> {{ notification.startTime | date: 'medium' }}<br />
+        <strong>Date:</strong> {{ notification.startTime | formatDate }}<br />
         <strong>Duration:</strong> {{ notification.durationInMinutes }} minutes<br />
         <strong>Total Tonnage:</strong> {{ notification.trainingDayTonnage }} kg
       </p>
