Ensured date is passed as a parameter

--- a/client/src/app/training-day-notification/training-day-notification.component.html
+++ b/client/src/app/training-day-notification/training-day-notification.component.html
@@ -8,7 +8,9 @@
     </div>
     <div class="training-notification-body">
       <p>
-        <strong>Date:</strong> {{ notification.startTime | formatDate }}<br />
+        @if (notification.startTime) {
+          <strong>Date:</strong> {{ notification.startTime | formatDate }}<br />
+        }
         <strong>Duration:</strong> {{ notification.durationInMinutes }} minutes<br />
         <strong>Total Tonnage:</strong> {{ notification.trainingDayTonnage }} kg
       </p>
