--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -61,6 +61,9 @@
               >Nutzungstatistiken</a
             >
           </li>
+          <li>
+            <a href="/user/ticket" #navLink #statisticLink class="dropdown-item" (click)="navigateTo($event)">Ticket</a>
+          </li>
 
           <li><hr class="dropdown-divider" /></li>
           <li>
