Handle no gym ticket available

--- a/client/src/app/gym-ticket/gym-ticket.component.html
+++ b/client/src/app/gym-ticket/gym-ticket.component.html
@@ -1,5 +1,5 @@
 @if (gymTicket$ | async; as gymTicket) {
-  @if (gymTicket) {
+  @if (gymTicket !== NO_GYM_TICKET_AVAILABLE) {
     <div class="upload-container" (click)="fileInput.click()">
       <img [src]="gymTicket" alt="Upload Image" class="w-100" />
 
@@ -11,4 +11,6 @@
       <input type="file" #fileInput (change)="handleImageUpload($event)" accept="image/*" hidden />
     </div>
   }
+} @else {
+  <app-spinner />
 }
