--- a/client/src/app/components/loaders/spinner/spinner.component.html
+++ b/client/src/app/components/loaders/spinner/spinner.component.html
@@ -1,10 +1,1 @@
-<div class="spinner-overlay">
-  <div class="sk-chase">
-    <div class="sk-chase-dot"></div>
-    <div class="sk-chase-dot"></div>
-    <div class="sk-chase-dot"></div>
-    <div class="sk-chase-dot"></div>
-    <div class="sk-chase-dot"></div>
-    <div class="sk-chase-dot"></div>
-  </div>
-</div>
+<span class="loader"></span>
