--- a/client/src/app/Pages/training-view/training-view.component.html
+++ b/client/src/app/Pages/training-view/training-view.component.html
@@ -43,7 +43,7 @@
               exercise: undefined,
               weight: undefined,
             };
-          @let namePrefix = 'day' + trainingDayIndex + '_exercise' + k + '_:';
+          @let namePrefix = 'day' + trainingDayIndex + '_exercise' + k + '_';
 
           <tr>
             <td data-cell="Category">
@@ -100,6 +100,7 @@
             <td data-cell="Weight">
               <input
                 weightInput
+                [id]="namePrefix + 'weight'"
                 [placeholder]="
                   previousTrainingDayExercise?.exercise && previousTrainingDayExercise.exercise === exercise?.exercise
                     ? previousTrainingDayExercise?.weight
@@ -115,6 +116,7 @@
               <input
                 type="number"
                 rpeInputDirective
+                [id]="namePrefix + 'targetRPE'"
                 class="transparent-input targetRPE"
                 [name]="namePrefix + 'targetRPE'"
                 [value]="exercise.targetRPE || ''"
@@ -124,6 +126,7 @@
               <input
                 type="string"
                 rpeInputDirective
+                [id]="namePrefix + 'actualRPE'"
                 class="transparent-input actualRPE"
                 [name]="namePrefix + 'actualRPE'"
                 [value]="exercise.actualRPE || ''"
@@ -143,6 +146,7 @@
               <input
                 type="text"
                 appInteractiveElement
+                [id]="namePrefix + 'notes'"
                 class="transparent-input notes"
                 [name]="namePrefix + 'notes'"
                 [value]="exercise.notes || ''"
