Implement mobile nav

--- a/client/src/app/mobile-nav/mobile-nav.component.html
+++ b/client/src/app/mobile-nav/mobile-nav.component.html
@@ -1,1 +1,21 @@
-<p>mobile-nav works!</p>
+<div class="nav-item">
+  <app-book-icon [size]="26" [color]="'#6c757d'" />
+  <span class="nav-label active">Home</span>
+</div>
+<div class="nav-item">
+  <app-book-icon [size]="26" [color]="'#6c757d'" />
+  <span class="nav-label">Search</span>
+</div>
+<div class="nav-item central">
+  <div class="central-icon">
+    <app-zap-icon [size]="26" [color]="'white'" />
+  </div>
+</div>
+<div class="nav-item">
+  <app-bell-icon [size]="26" [color]="'#6c757d'" />
+  <span class="nav-label">History</span>
+</div>
+<div class="nav-item">
+  <app-profile-icon [size]="26" [color]="'#6c757d'" />
+  <span class="nav-label">Profile</span>
+</div>
