--- a/client/src/app/components/icon/book-icon/book-icon.component.html
+++ b/client/src/app/components/icon/book-icon/book-icon.component.html
@@ -4,7 +4,7 @@
   [attr.height]="size()"
   viewBox="0 0 24 24"
   fill="none"
-  stroke="currentColor"
+  [attr.stroke]="color()"
   stroke-width="2"
   stroke-linecap="round"
   stroke-linejoin="round"
