--- a/client/src/app/mobile-nav/mobile-nav.component.html
+++ b/client/src/app/mobile-nav/mobile-nav.component.html
@@ -13,7 +13,7 @@
 </div>
 <div class="nav-item">
   <app-bell-icon [size]="26" [color]="'#6c757d'" />
-  <span class="nav-label">History</span>
+  <span class="nav-label">Messages</span>
 </div>
 <div class="nav-item">
   <app-profile-icon [size]="26" [color]="'#6c757d'" />
