Dont get profile pic from google due to current issues

--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -40,8 +40,8 @@
           aria-expanded="false"
         >
           <img
-            [src]="profile?.pictureUrl || '/images/profile-placeholder.webp'"
-            alt="mdo"
+            [src]="profile?.pictureUrl ?? '/images/profile-placeholder.webp'"
+            alt="M"
             width="26"
             height="26"
             class="rounded-circle"
