--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -22,7 +22,7 @@ body {
 
 .blur-background > *:not(app-modal) {
   filter: blur(2px);
-  transition: filter 0.3s ease-in-out; /* Optional: smooth transition */
+  transition: filter 0.3s ease-in-out;
 }
 
 .outlet-wrapper {
@@ -32,11 +32,9 @@ body {
 @media screen and (max-width: 786px) {
   .outlet-wrapper {
     padding-inline: 4%;
-    padding-bottom: 5rem;
   }
 }
 
-/* Boostrap Overrides */
 .modal-content {
   background-image: linear-gradient(rgba(240, 240, 240, 0.6), rgba(250, 250, 250, 0.65)),
     url('/images/background/white-3.avif');
