--- a/client/src/app/mobile-nav/mobile-nav.component.html
+++ b/client/src/app/mobile-nav/mobile-nav.component.html
@@ -8,11 +8,11 @@
 </div>
 <div class="nav-item central">
   <div class="central-icon">
-    <app-zap-icon [size]="26" [color]="'white'" />
+    <app-icon name="zap" [size]="26" color="white" />
   </div>
 </div>
 <div class="nav-item">
-  <app-bell-icon [size]="26" [color]="'#6c757d'" />
+  <app-icon name="bell" [size]="26" color="#6c757d" />
   <span class="nav-label">Messages</span>
 </div>
 <div class="nav-item">
